cdebconf (0.81) UNRELEASED; urgency=low

  * Colin Watson
    - When building the slang frontend against slang2, enable UTF-8
      according to the locale.

 -- Colin Watson <cjwatson@debian.org>  Mon, 27 Jun 2005 23:07:42 +0100

cdebconf (0.80) unstable; urgency=low

  * Colin Watson
    - Stop hardcoding configdb and templatedb in stack database
      initialisation.
    - Use question_db_new instance parameter in debconf-copydb and
      debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
      variable.
    - Constify question_db_new instance parameter.
    - If DEBCONF_NO_I18N=1 is set in the environment, ignore localised
      fields in templates. This is a hack to let debconf-copydb and
      debconf-dumpdb work with template databases produced by debconf.
    - Look at config::instance::*::template to find out which template
      database to use when reading a given config database (which makes a
      difference for questions created using REGISTER). This is only used by
      debconf-copydb and debconf-dumpdb right now, and the global template
      database is retained as a fallback.
    - Add template instance for the debconf database in /target to the
      distributed cdebconf.conf, and associate it with target_configdb.
    - Remove assumption that RFC822 lines are no more than 8192 bytes long:
      the config entry for console-data/keymap/full violates that. In the
      process, consolidate the multiple duplicate definitions of
      unescapestr() and escapestr() into one place.
    - Merge old and new owner lists when setting a question in rfc822db,
      rather than overwriting the old owners. Add to-do entry for other
      databases.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team

 -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 19:21:50 +0100

cdebconf (0.79) unstable; urgency=low

  * Attilio Fiandrotti
    - Remove old experimental code that was no longer needed.