@@ -3,6 +3,9 @@ cdebconf (0.81) UNRELEASED; urgency=low
   * Colin Watson
     - When building the slang frontend against slang2, enable UTF-8
       according to the locale.
+    - Add a continue button to string and password questions in the newt
+      frontend, although you can still just press Enter in the text entry
+      box (closes: #257969).
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 27 Jun 2005 23:07:42 +0100
 
